--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -43,7 +43,7 @@
 .header__menu li {
     font-weight: 500;
     font-family: var(--plus-jakarta-sans);
-    color: var(--secondary-color);
+    color: var(--purple);
     font-size: 16px;
     line-height: 20px;
     cursor: pointer;
